# mai_oop

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
lab_01/: CMakeLists.txt  main.cpp
lab_01/include/: closed_pair_tonum.h
lab_01/src/: closet_pair_tonum.cpp
lab_01/test/: tests01.cpp
lab_02/: CMakeLists.txt  main.cpp
lab_02/include/: thirteen.h
lab_02/src/: thirteen.cpp
lab_02/test/: tests02.cpp
lab_03/: CMakeLists.txt  main.cpp
lab_03/include/: figure.h  figureVector.h  rectangle.h  rhomb.h  trapezoid.h
lab_03/src/: figureVector.cpp  rectangle.cpp  rhomb.cpp  trapezoid.cpp
lab_03/test/: tests03.cpp
lab_04/: CMakeLists.txt  main.cpp
lab_04/include/: array.hpp  figure.hpp  point.hpp  rectangle.hpp  rhomb.hpp  trapezoid.hpp
lab_04/src/: array.tpp  point.tpp  rectangle.tpp  rhomb.tpp  trapezoid.tpp
lab_04/test/: tests04.cpp
lab_05/: CMakeLists.txt  main.cpp
lab_05/include/: dynamic_array.hpp  dynamic_memory_resource.hpp
lab_05/src/: dynamic_array.tpp  dynamic_memory_resource.cpp
lab_05/test/: tests05.cpp
lab_6/: CMakeLists.txt  main.cpp
lab_6/include/: BattleVisitor.hpp  Logger.hpp  NPC.hpp  NPCFactory.hpp  Serializer.hpp  Visitor.hpp
lab_6/src/: BattleVisitor.cpp  Logger.cpp  NPC.cpp  NPCFactory.cpp  Serializer.cpp
lab_6/test/: tests06.cpp
lab_7/: CMakeLists.txt  main.cpp
lab_7/include/: BattleVisitor.hpp  ConsoleLogger.hpp  FileLogger.hpp  NPC.hpp  NPCFactory.hpp  Observer.hpp  Serializer.hpp  Visitor.hpp
lab_7/src/: BattleVisitor.cpp  ConsoleLogger.cpp  FileLogger.cpp  NPC.cpp  NPCFactory.cpp  Serializer.cpp
